# robotframework-scaffold

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
robotframework_scaffold/: cli.py
robotframework_scaffold/scaffolder/: base_resource.py  constants.py  create_common_resource.py  creator.py  poetry_setup.py  preview.py  prompts.py  readme.py  structure.py  suite_generator.py  venv_setup.py
robotframework_scaffold/scaffolder/templates/: api_connection.py  mobile_common.py  web_common.py
robotframework_scaffold/scaffolder/templates/api/create_contracts_routes/: contracts_generator.py
robotframework_scaffold/scaffolder/templates/api/create_session/: session_generator.py
