[tool.poetry]
name = "robotframework-scaffold"
version = "0.1.7"
description = "A scaffold tool for structuring Robot Framework projects with best practices."
authors = ["Robot Courses <git@robotcourses.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "robotframework_scaffold" }]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.8"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
robot-scaffold = "robotframework_scaffold.cli:main"